# Job-Market-Insights-Tool

./: README.md  pyproject.toml
app/: main.py  software_engineer.csv
